package sessionsrv;

message Account {
  required uint64 id = 1;
  required string email = 2;
  required string name = 3;
}

message Session {
  required uint64 id = 1;
  required string email = 2;
  required string name = 3;
  required string token = 4;
}

message SessionToken {
  required string token = 1;
  required uint64 owner_id = 2;
}

message SessionCreate {
  required string code = 1;
}

message SessionGet {
  required string token = 1;
}
